# xconnect

./: .editorconfig  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  deploy-vps.yml
apps/desktop-macos/XConnectMac/: ContentView.swift  Info.plist  RuntimeConfig.plist  RuntimeConfig.swift  XConnectMacApp.swift
apps/desktop-macos/XConnectMac.xcodeproj/: project.pbxproj
apps/desktop-tauri/: tauri.conf.json
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: commands.rs  main.rs
apps/desktop-tauri/src/ui/: app.js  index.html  styles.css
crates/host-runtime/: Cargo.toml
crates/host-runtime/src/: capture_macos.rs  capture_windows.rs  clipboard.rs  encoder_h264.rs  input_apply.rs  lib.rs  webrtc_host.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  signal.rs
crates/protocol/tests/: serde_roundtrip.rs
crates/viewer-runtime/: Cargo.toml
crates/viewer-runtime/src/: clipboard.rs  input_capture.rs  lib.rs  render.rs  webrtc_viewer.rs
deploy/: docker-compose.yml  prometheus.yml
deploy/coturn/: turnserver.conf
deploy/env/: .env.example
deploy/nginx/: nginx.conf
deploy/scripts/: bootstrap.sh  ci-deploy.sh  renew-hook.sh
docs/release/: alpha-checklist.md
docs/runbooks/: security.md
memory/: 2026-03-20.md
services/control-plane/: Cargo.toml  Dockerfile
services/control-plane/migrations/: 0001_init.sql
services/control-plane/src/: auth.rs  config.rs  errors.rs  http_auth.rs  http_devices.rs  main.rs  metrics.rs  presence_redis.rs  session_service.rs  tracing.rs  ws_signal.rs
services/control-plane/src/db/: memory.rs  mod.rs
