[workspace]
resolver = "2"
members = [
  "crates/protocol",
  "crates/host-runtime",
  "crates/viewer-runtime",
  "services/control-plane"
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
futures-util = "0.3"
jsonwebtoken = "9"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tokio-tungstenite = "0.24"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
webrtc = "0.17.1"
xcap = "0.6"
enigo = "0.3"
arboard = "3.4"
