[package]
name = "viewer-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arboard.workspace = true
bytes.workspace = true
chrono.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true
webrtc.workspace = true
xconnect-protocol = { path = "../protocol" }
