[package]
name = "control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dashmap.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
argon2 = "0.5"
base64 = "0.22"
http = "1"
xconnect-protocol = { path = "../../crates/protocol" }
futures-util = "0.3"
