[package]
name = "desktop-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["serde", "v4"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[workspace]
